added --hyperestraier switch, which turns on search support
(ok, the way I run estseek.cgi is admittedly pretty nasty, but it works..)

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -102,6 +102,11 @@ Currently implemented:
 
   Wiki admins can lock pages so that only other admins can edit them.
 
+* Full text search
+
+  ikiwiki can use the [[HyperEstraier]] search engine to add powerful
+  full text search capabilities to your wiki.
+
 ----
 
 It also has some [[TODO]] items and [[Bugs]].
