--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -143,6 +143,11 @@ These options configure the wiki.
   Currently allows locking of any page, other powers may be added later.
   May be specified multiple times for multiple admins.
 
+* --hyperestraier
+
+  Enables use of the [[HyperEstraier]] search engine for full test page
+  searches.
+
 * --verbose
 
   Be vebose about what it's doing.
