--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -18,6 +18,9 @@ It ships with some basic templates which can be customised:
   page.
 * `templates/inlinepagetitle.tmpl` - Used for listing a page inline in a blog
   archive page.
+* `estseek.conf` - Not a html template, this is actually a template for
+  a config file for the [[HyperEstraier]] search engine. If you like you
+  can read the [[HyperEstraier]] docs and configure it using this.
 
 If you like, you can add these to further customise it:
 
