web commit by joey

--- a/doc/hyperestraier.mdwn
+++ b/doc/hyperestraier.mdwn
@@ -1,3 +1,3 @@
-[Hyper Estraier](http://hyperestraier.sourceforge.net/) is a full text search engine. Ikiwiki can be configured to use it as the search engine for the wiki (see [[[usage]]). This makes ikiwiki call Hyper Ertaier to update its index of pages each time a change is made to the wiki.
+[Hyper Estraier](http://hyperestraier.sourceforge.net/) is a full text search engine. Ikiwiki can be configured to use it as the search engine for the wiki (see [[usage]]). This makes ikiwiki call Hyper Ertaier to update its index of pages each time a change is made to the wiki.
 
 It's possible to configure Hyper Estraier via one of ikiwiki's [[templates]].
