--- a/doc/todo/html.mdwn
+++ b/doc/todo/html.mdwn
@@ -27,5 +27,9 @@ editing the [[templates]] and/or editing [[style.css]] BTW.
 	    &lt;/div&gt;  
 	This prevents markdown enclosing and even adds a useful css identifier. Problem is that this should be added to every page and not in the template(s). --[[JeroenSchot]]
 
+	I can make ikiwiki add that around every inlined page easily
+	enough. However, where is it docuemented? Came up dry on google.
+	--[[Joey]]
+
 This page is now valid.
 Test: [validate this page](http://validator.w3.org/check?url=referer)
