web commit by DavidSchmitt

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -4,3 +4,4 @@ This page is to track users of ikiwiki.
 * [[Joey]]'s [homepage](http://kitenet.net/~joey/), including his weblog
 * Jeroen Schot's [homepage/weblog](http://schot.a-eskwadraat.nl)
 * Kyle's [MacLea Genealogy wiki](http://kitenet.net/~kyle/family/wiki)
+* David's [Master's Thesis wiki](https://dipl.black.co.at/wiki/) (german)
