--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -7,8 +7,8 @@ optional support for commits from the web.
 		apt-get install ikiwiki # soon
 
    Ikiwiki requires [[MarkDown]] be installed, and also uses the following
-   perl modules: `CGI::Session` `CGI::FormBuilder` `HTML::Template`
-   `Mail::SendMail` `Time::Duration`
+   perl modules: `CGI::Session` `CGI::FormBuilder` (version 3.02.02 or
+   newer) `HTML::Template` `Mail::SendMail` `Time::Duration`
 
 2. Create the subversion repository for your wiki.
 
