--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -5,3 +5,4 @@ This page is to track users of ikiwiki.
 * Jeroen Schot's [homepage/weblog](http://schot.a-eskwadraat.nl)
 * Kyle's [MacLea Genealogy wiki](http://kitenet.net/~kyle/family/wiki)
 * David's [Master's Thesis wiki](https://dipl.black.co.at/wiki/) (german)
+* Ulrik's [small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
