web commit by iain

--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -38,3 +38,4 @@
   breaks things unexpectedly and requires escaping.
 * ikiwiki will generate html formatted error messages to the command
   line if --cgi is set, even if it's not yet running as a cgi
+* ikiwiki package depends on "libtime-date-perl".  Do you mean "libtimedate-perl"?
