--- a/basewiki/markdown.mdwn
+++ b/basewiki/markdown.mdwn
@@ -5,4 +5,6 @@ email messages. It is the markup language used by this wiki.
 For documentation about the markdown syntax, see [[HelpOnFormatting]] and
 [Markdown: syntax](http://daringfireball.net/projects/markdown/syntax).
 
-Note that [[WikiLink]]s and [[PostProcessorDirective]]s are not part of the markdown syntax, and are the only bit of markup that this wiki handles internally.
+Note that [[WikiLink]]s and [[PreProcessorDirective]]s are not part of the
+markdown syntax, and are the only bit of markup that this wiki handles
+internally.
