--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -22,7 +22,7 @@ These options control the mode that ikiwiki is operating in.
 
 * --refresh
 
-  Refresh the wiki, updating any changes pages. This is the default
+  Refresh the wiki, updating any changed pages. This is the default
   behavior so you don't normally need to specify it.
 
 * --rebuild
