web commit by ThomasSchwinge

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -16,6 +16,8 @@ Here's another one with *emphasised* text.
 >
 > > This is nested blockquote.
 >
+>> Does this also work? -- It does.
+>
 > Back to the first level.
 
 Numbered list 
