web commit by ThomasSchwinge

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -23,8 +23,14 @@ Here's another one with *emphasised* text.
 Numbered list 
 
 1. First item.
+ 1. Sub item.
 1. Another.
 1. And another..
+ 1. foo
+ 2. bar
+  3. baz
+   4. qux
+    5. quux
 
 Bulleted list
 
