--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -16,11 +16,16 @@ you let anyone else edit files on the wiki, then anyone can have fun exploiting
 the web browser bug of the day. This type of attack is typically referred
 to as an XSS attack ([google](http://www.google.com/search?q=xss+attack)).
 
+TODO: determine whether to try to deal with XSS attacks or whether this is
+just something people using ikiwiki will need to keep in mind.
+
 ## image files etc attacks
 
 If it enounters a file type it does not understand, ikiwiki just copies it
 into place. So if you let users add any kind of file they like, they can
-upload images, movies, windows executables, css files, etc. If these files exploit security holes in the browser of someone who's viewing the wiki, that can be a security problem.
+upload images, movies, windows executables, css files, etc. If these files
+exploit security holes in the browser of someone who's viewing the wiki,
+that can be a security problem.
 
 Of course nobody else seems to worry about this in other wikis, so should we?
 
@@ -32,7 +37,9 @@ they can try to use this to exploit your web server.
 
 ## multiple accessors of wiki directory
 
-If multiple people can write to the source directory ikiwiki is using, or to the destination directory it writes files to, then one can cause trouble for the other when they run ikiwiki through symlink attacks.
+If multiple people can write to the source directory ikiwiki is using, or
+to the destination directory it writes files to, then one can cause trouble
+for the other when they run ikiwiki through symlink attacks.
 
 So it's best if only one person can ever write to those directories.
 
@@ -44,7 +51,9 @@ this wiki, BTW.
 
 ## svn commit logs
 
-Anyone with svn commit access can forge "web commit from foo" and make it appear on [[RecentChanges]] like foo committed. One way to avoid this would be to limit web commits to those done by a certian user.
+Anyone with svn commit access can forge "web commit from foo" and make it
+appear on [[RecentChanges]] like foo committed. One way to avoid this would
+be to limit web commits to those done by a certian user.
 
 It's actually possible to force a whole series of svn commits to appear to
 have come just before yours, by forging svn log output. This could be
