--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -102,7 +102,8 @@ been no problem yet.
 
 ikiwiki does not expose untrusted data to the shell. In fact it doesn't use
 system() at all, and the only use of backticks is on data supplied by the
-wiki admin and untainted filenames. And it runs with taint checks on of course..
+wiki admin and untainted filenames. And it runs with taint checks on of
+course..
 
 ## cgi data security
 
@@ -129,7 +130,8 @@ If you care, you can use https, I suppose.
 
 # Fixed holes
 
-_(Unless otherwise noted, these were discovered and immediatey fixed by the ikiwiki developers.)_
+_(Unless otherwise noted, these were discovered and immediatey fixed by the
+ikiwiki developers.)_
 
 ## destination directory file replacement
 
