--- a/doc/todo/done/mailnotification.mdwn
+++ b/doc/todo/done/mailnotification.mdwn
@@ -52,3 +52,6 @@ should be safe. --[[WillThompson]])
      into a folder.
 
   --[[BrandenRobinson]]
+
+  I'm deferring these nicities until there's some demonstrated demand
+  --[[Joey]].
