--- a/doc/news/email_subscriptions.mdwn
+++ b/doc/news/email_subscriptions.mdwn
@@ -1,6 +1,8 @@
 ikiwiki now supports subscribing to pages on wikis with a subversion
 backend. Subscribers will be mailed commit diffs.
 
+(Support for editing subscriptions in the web UI will be implemented RSN.)
+
 Some changes are needed to ikiwiki configs to support this:
 
 * A new `--adminemail` config option has been added, that is used for both
