web commit by joey

--- a/doc/news/email_subscriptions.mdwn
+++ b/doc/news/email_subscriptions.mdwn
@@ -1,7 +1,7 @@
 ikiwiki now supports subscribing to pages on wikis with a subversion
 backend. Subscribers will be mailed commit diffs.
 
-(Support for editing subscriptions in the web UI will be implemented RSN.)
+(Support for editing subscriptions in the web UI will be implemented RSN. Got a bit ahead of myself with commits here.. --[[Joey]])
 
 Some changes are needed to ikiwiki configs to support this:
 
