subscription nearly done

--- a/basewiki/globlist.mdwn
+++ b/basewiki/globlist.mdwn
@@ -1,5 +1,5 @@
 When the wiki stores lists of pages, such as pages that are locked or pages
-that you want to be emailed if changed, it uses a GlobList.
+whose commit emails you want subscribe to, it uses a GlobList.
 
 This is a list of page names, separated by white space. The "glob" bit is
 that as well as full page names, it can contain glob patterns. "`*`" stands
