--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -44,7 +44,8 @@ Currently implemented:
   matching a specified [[GlobList]] will be displayed as a weblog within
   the blog page. And an RSS feed can be generated to follow the blog.
 
-  Ikiwikit's own [[TODO]] and [[news]] pages are good examples of some of the flexible ways that this can be used.
+  Ikiwikit's own [[TODO]] and [[news]] pages are good examples of some of
+  the flexible ways that this can be used.
 
 * Fast compiler
 
@@ -106,6 +107,11 @@ Currently implemented:
 
   ikiwiki can use the [[HyperEstraier]] search engine to add powerful
   full text search capabilities to your wiki.
+
+* Commit mails
+
+  ikiwiki can be configured to send you commits mails with diffs of changes
+  of selected pages.
 
 ----
 
