web commit by joey

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -6,3 +6,4 @@ This page is to track users of ikiwiki.
 * Kyle's [MacLea Genealogy wiki](http://kitenet.net/~kyle/family/wiki)
 * David's [Master's Thesis wiki](https://dipl.black.co.at/wiki/) (german)
 * Ulrik's [small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
+* [kite](http://kitenet.net)
