--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -9,7 +9,7 @@ optional support for commits from the web.
    Ikiwiki requires [[MarkDown]] be installed, and also uses the following
    perl modules: `CGI::Session` `CGI::FormBuilder` (version 3.02.02 or
    newer) `HTML::Template` `Mail::SendMail` `Time::Duration` `Date::Parse`
-   (libtimedate-perl)
+   (libtimedate-perl), `HTML::Scrubber`
 
 2. Create the subversion repository for your wiki.
 
