web commit by joey

--- a/doc/htmlsanitization.mdwn
+++ b/doc/htmlsanitization.mdwn
@@ -1,5 +1,5 @@
 When run with the --sanitize switch, which is turned on by default (see
-[[usage]], ikiwiki sanitizes the html on pages it renders to avoid XSS
+[[usage]]), ikiwiki sanitizes the html on pages it renders to avoid XSS
 attacks and the like.
 
 ikiwiki excludes all html tags and attributes except for those that are
