--- a/doc/htmlsanitization.mdwn
+++ b/doc/htmlsanitization.mdwn
@@ -15,7 +15,7 @@ While I beleive that this makes ikiwiki as resistant to malicious html
 content as anything else on the web, I cannot guarantee that it will
 actually protect every user of every browser from every browser security
 hole, badly designed feature, etc. I can provide NO WARRANTY, like it says
-in ikiwiki's [[GPL]] license. 
+in ikiwiki's [GPL](GPL) license. 
 
 The web's security model is *fundamntally broken*; ikiwiki's HTML
 sanitisation is only a patch on the underlying gaping hole that is your web
