web commit by joey

--- a/doc/htmlsanitization.mdwn
+++ b/doc/htmlsanitization.mdwn
@@ -17,7 +17,7 @@ actually protect every user of every browser from every browser security
 hole, badly designed feature, etc. I can provide NO WARRANTY, like it says
 in ikiwiki's [GPL](GPL) license. 
 
-The web's security model is *fundamntally broken*; ikiwiki's HTML
+The web's security model is *fundamentally broken*; ikiwiki's HTML
 sanitisation is only a patch on the underlying gaping hole that is your web
 browser.
 
