web commit by joey

--- a/doc/htmlsanitization.mdwn
+++ b/doc/htmlsanitization.mdwn
@@ -11,7 +11,7 @@ ikiwiki uses the HTML::Scrubber perl module to perform its html
 sanitisation, and this perl module also deals with various entity encoding
 tricks.
 
-While I beleive that this makes ikiwiki as resistant to malicious html
+While I believe that this makes ikiwiki as resistant to malicious html
 content as anything else on the web, I cannot guarantee that it will
 actually protect every user of every browser from every browser security
 hole, badly designed feature, etc. I can provide NO WARRANTY, like it says
