web commit by joey

--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -203,4 +203,4 @@ pages from source with some other extension.
 
 ## XSS attacks in page content
 
-ikiwiki supports [[HtmlSanitistion]], though it can be turned off.
+ikiwiki supports [[HtmlSanitization]], though it can be turned off.
