web commit by joey

--- a/doc/htmlsanitization.mdwn
+++ b/doc/htmlsanitization.mdwn
@@ -1,4 +1,4 @@
-When run with the --sanitize switch, which is turned on by default (see
+When run with the `--sanitize` switch, which is turned on by default (see
 [[usage]]), ikiwiki sanitizes the html on pages it renders to avoid XSS
 attacks and the like.
 
