web commit by joey

--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -10,6 +10,8 @@ to be kept in mind.
 
 # Probable holes
 
+_(THe list of things to fix.)_
+
 ## svn commit logs
 
 Anyone with svn commit access can forge "web commit from foo" and make it
