web commit by joey

--- a/doc/todo/lists.mdwn
+++ b/doc/todo/lists.mdwn
@@ -2,3 +2,7 @@
 
   This could be its own static pages updated when other pages are updated.
   Perhaps this ties in with the [[pluggablerenderers]]?
+
+* list of registered users, with the names being links to any userpages.
+
+  Could be implemented with a [[preprocessordirective]], which suggests that there needs to be some sort of plugin interface for new preprocessordirectives.
