--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -6,7 +6,7 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki. It's the best way to find out when there's a new version to [[Download]].
 
-* See [[Features]] for a list of ikiwiki's features. [[TODO]] and [[bugs]] might also be of interest.
+* See [[Features]] for a list of ikiwiki's features. [[RoadMap]], [[TODO]] and [[bugs]] might also be of interest.
 
 * [[Setup]] has a tutorial for setting up ikiwki, and [[Usage]] documents the parameters and usage of the ikiwiki program. If you use ikiwiki, please add your wiki to [[IkiWikiUsers]].
 
