web commit by joey

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -11,7 +11,7 @@ Estimated ETA for 1.0 is May 2006.
 
 # 2.0
 
-* Plugin mechanism. See [[todo/PluggableRenderers]]. Should support things like [[todo/lists]] and [[todo/linkmap]].
+* Plugin mechanism. See [[todo/PluggableRenderers]]. Should support things like [[todo/lists]] and [[todo/link_map]].
 * Should have fully working [[todo/utf8]] support.
 * Optimised rendering if possible. Deal with other scalability issues.
 * improved [[todo/html]] stylesheets and templates
