--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -5,7 +5,7 @@ This is the roadmap for ikiwiki drevelopment.
 Generally usable release.
 
 * No severe [[security]] bugs.
-* All the features people would expect in a wiki. Needs to be a plausable promise of being a wiki that people can commit to [[using|ikiwikiusers]].
+* All the [[features]] people would expect in a wiki. Needs to be a plausable promise of being a wiki that people can commit to [[using|ikiwikiusers]].
 
 Estimated ETA for 1.0 is May 2006.
 
