web commit by joey

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -15,3 +15,4 @@ Estimated ETA for 1.0 is May 2006.
 * Should have fully working [[todo/utf8]] support.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
 * improved [[todo/html]] stylesheets and templates
+* Support for at least one RCS aside from svn. Once it supports 2, it should quickly grow to support them all..
