--- a/basewiki/blog.mdwn
+++ b/basewiki/blog.mdwn
@@ -1,5 +1,5 @@
 You can turn any page on this wiki into a weblog by inserting a
-[[PostProcessorDirective]]. Like this:
+[[PreProcessorDirective]]. Like this:
 
 \\[[inline pages="blog/* !*/Discussion" show="10" rootpage="blog"]]
 
