web commit by joey

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -11,6 +11,7 @@ Estimated ETA for 1.0 is May 2006.
 
 # 2.0
 
+* A version of the logo in a different font, possibly with the dots on the i's highlighted in some other color.
 * Plugin mechanism. See [[todo/PluggableRenderers]]. Should support things like [[todo/lists]] and [[todo/link_map]].
 * Should have fully working [[todo/utf8]] support.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
