web commit by joey

--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -2,7 +2,7 @@ ikiwiki uses the HTML::Template module as its template engine. This
 supports things like conditionals and loops in templates and is pretty easy
 to learn.
 
-I aim to keep almost all html out of ikiwiki and in the templates.
+The aim is to keep almost all html out of ikiwiki and in the templates.
 
 It ships with some basic templates which can be customised:
 
