web commit by joey

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -108,8 +108,8 @@ Some of ikiwiki's features:
 
 * Commit mails
 
-  ikiwiki can be configured to send you commits mails with diffs of changes
-  of selected pages.
+  ikiwiki can be configured to send you commit mails with diffs of changes
+  to selected pages.
 
 ----
 
