web commit by joey

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -23,7 +23,8 @@ Some of ikiwiki's features:
   page with a filename ending in ".mdwn" is converted from markdown to html
   by ikiwiki. Markdown understands text formatted as it would be in an email,
   and is quite smart about converting it to html. The only additional markup
-  provided by ikiwiki aside from regular markdown is the [[WikiLink]].
+  provided by ikiwiki aside from regular markdown is the [[WikiLink]] and 
+  [[PreprocessorDirective]]
 
 * support for other file types
 
