--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -51,7 +51,7 @@ To link to any other web page, or to an email address, you can just put the url 
 
 ----
 
-Advanced users can use [[PostProcessorDirective]]s to do additional cool
+Advanced users can use [[PreProcessorDirective]]s to do additional cool
 stuff.
 
 ----
