--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ikiwiki (0.2) unstable; urgency=low
+ikiwiki (1.0) unstable; urgency=low
 
-  * Initial release.
+  * First official release.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 14 Mar 2006 22:44:16 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 25 Apr 2006 02:08:17 -0400
