--- a/doc/news/version_1.0.mdwn
+++ b/doc/news/version_1.0.mdwn
@@ -1,3 +1,1 @@
-ikiwiki 1.0 released with these changes:
-
-   * First official release.
+The first versioned release of ikiwiki, version 1.0, has just been released. [[Download]] it today!
